--- a/.github/workflows/csharp_build.yaml
+++ b/.github/workflows/csharp_build.yaml
@@ -18,7 +18,7 @@ jobs:
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '16.0'
+        dotnet-version: '16.x'
 
     - name: Restore dependencies
       run: dotnet restore 'Unisoc AT.sln'
