--- a/.github/workflows/csharp_build.yaml
+++ b/.github/workflows/csharp_build.yaml
@@ -19,13 +19,13 @@ jobs:
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '9.x'
+        dotnet-version: '8.0.x'
 
     - name: Restore dependencies
       run: dotnet restore
 
     - name: Build solution
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build --configuration Release /p:Platform="Any CPU" /p:PreferredToolArchitecture=x64
 
     - name: List some files 2
       # working-directory: tdlib_source/example/android
