--- a/.github/workflows/csharp_build.yaml
+++ b/.github/workflows/csharp_build.yaml
@@ -27,7 +27,7 @@ jobs:
     # - name: Build solution
     #   run: dotnet build --configuration Release /p:Platform="Any CPU" /p:PreferredToolArchitecture=x64
     - name: Build with Visual Studio MSBuild
-      run: '"C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin\MSBuild.exe" /p:Configuration=Release /p:Platform="Any CPU" /p:PreferredToolArchitecture=x64'
+      run: dotnet build "Unisoc AT.sln" --configuration Release /p:Platform="Any CPU" /p:PreferredToolArchitecture=x64 /p:GenerateResourceMSBuildArchitecture=x64 /p:UseSharedCompilation=false
 
     - name: List some files 2
       # working-directory: tdlib_source/example/android
